[package]
name = "engcfg"
version = "0.1.0"
authors = ["wheelin <greg.emry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.num]
version = "0.3"
default-features = false

[dev-dependencies]
rstest = "0.6.4"